@@ -16,6 +16,7 @@ next version - not released yet
 ! Ticket #2953, DVB: Fix crash when closing window right after switching channel
 ! Ticket #3666, DVB: Don't clear the channel list on saving new scan result
 ! Ticket #4436, DVB: Improve compatibility with certain tuners
+! Ticket #4937, Prevent showing black bars when window size after scale exceed current work area
 
 
 1.7.7 - 05 October 2014
